--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,21 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  test:
+    name: test
+    runs-on: ubuntu-latest
+    env:
+      FORCE_COLOR: 1
+    strategy:
+      fail-fast: false
+      matrix:
+        elixirbase:
+          - "1.15.2-erlang-26.0.2-ubuntu-jammy-20230126"
+    steps:
+      - uses: earthly/actions-setup@v1
+      - uses: actions/checkout@v3
+      - name: ecto test under ${{matrix.elixirbase}}
+        run: earthly -P --ci --build-arg ELIXIR_BASE=${{matrix.elixirbase}} +test
   lint:
     name: lint
     runs-on: ubuntu-latest
@@ -23,7 +38,7 @@ jobs:
       fail-fast: false
       matrix:
         elixirbase:
-          - "1.15.2-erlang-26.0.2"
+          - "1.15.2-erlang-26.0.2-ubuntu-jammy-20230126"
     steps:
       - uses: earthly/actions-setup@v1
       - uses: actions/checkout@v3
